# yoauth

./: .gitignore  CMakeLists.txt  build.sh  build.yml  build_android.sh  clean.sh  readme.md  readme_cn.md
cmake/: FindNcurses.cmake
dep_modules/: mugglec.yml  ncurses.yml  openssl.unix.yml  openssl.win.yml  unity.yml
patch_scripts/: mugglec_cmakelist.txt
src/yoauth/: config.h.in  macro.h  totp.c  totp.h
src/yoauth/core/: core.h  crypt.c  crypt.h  fileutils.c  fileutils.h  macro.h  struct.h  totp.c  totp.h
src/yoauth/exe/: command_add.c  command_add.h  command_del.c  command_del.h  command_dump.c  command_dump.h  command_list.c  command_list.h  command_load.c  command_load.h  command_user.c  command_user.h  handle.c  handle.h  main.c  path_manager.c  path_manager.h  scenes.c  scenes.h  style.h  tui.c  tui.h
test/crypt/: test_crypt.c
test/fileutils/: test_fileutils.c
test/totp/: test_hello.c  test_totp.c
